commitindex: A POST to the iteration endpoint may optionally specify a topic id to denote an existing topic for the new iteration (Bug 1351799). r=mars
MozReview-Commit-ID: 5RfphhB9SH3

--HG--
extra : rebase_source : 2b5da163d1433b8c7f740e49ada31e0030aa8c49
